  use numeric fields that perform well both for filtering and sorting.
  (Francisco Fernández Castaño)

* GITHUB#12033: Support for Java 19 foreign memory support is now enabled by default,
  no need to pass "--enable-preview" on the command line. If exactly Java 19 is used,
  MMapDirectory will mmap Lucene indexes in chunks of 16 GiB (instead of 1 GiB) and
  indexes closed while queries are running can no longer crash the JVM.  (Uwe Schindler)

* GITHUB#11869: RangeOnRangeFacetCounts added, supporting numeric range "relationship" faceting over docvalue-stored
  ranges. (Marc D'Mello)

Improvements
---------------------
* GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
  is now tagged. (Namgyu Kim)

* GITHUB#11785: Improve Tessellator performance by delaying calls to the method
  #isIntersectingPolygon (Ignacio Vera)

* GITHUB#687: speed up IndexSortSortedNumericDocValuesRangeQuery#BoundedDocIdSetIterator
  construction using bkd binary search. (Jianping Weng)

* GITHUB#11985: ExitableTerms to override Terms#getMin and Terms#getMax in order to avoid
  iterating through the terms when the wrapped implementation caches such values. (Luca Cavanna)

* GITHUB#11860: Improve storage efficiency of connections in the HNSW graph that Lucene uses for
  vector search. (Ben Trent)

* GITHUB#12008: Clean up LongRange#verifyAndEncode logic to remove unnecessary NaN checks. (Greg Miller)

* GITHUB#12003: Minor cleanup/improvements to IndexSortSortedNumericDocValuesRangeQuery. (Greg Miller)

* GITHUB#12016: Upgrade lucene/expressions to use antlr 4.11.1 (Andriy Redko)

Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported
  window size for LZ4. (Adrien Grand)

* GITHUB#11768: Taxonomy and SSDV faceting now correctly breaks ties by preferring smaller ordinal
  values. (Greg Miller)
